src/objects/Service_Provider__c.object
<CustomObject>
    <description>This will contain all Accredited Meralco Contractors, Third Party Service/Product, Subsidiary Service/Product, DU Services</description>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Blacklisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accredited Meralco Contractor (AMC)</fullName>
                </value>
                <value>
                    <fullName>Third Party Service Provider</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Internal DU</fullName>
                </value>
                <value>
                    <fullName>Accredited Meralco Contractor (AMC)/Third Party Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Provider</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Providers</pluralLabel>
    <recordTypes>
        <fullName>Service_Provider</fullName>
        <active>true</active>
        <description>AMC, Subsidiary, Third Party</description>
        <label>Service Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>